--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -37,6 +37,7 @@
             <li><a class="" href="#introducción">Introducción</a></li>
             <li><a class="" href="#agradecimientos">Agradecimientos</a></li>
             <li><a class="" href="#invernadero">Invernadero</a></li>
+            <!--
             <ol>
                 <li><a href="#definición-de-invernadero">Definición de Invernadero</a></li>
                 <li><a href="#invernaderos-planos-o-tipo-parral">Invernaderos planos o tipo parral</a></li>
@@ -46,7 +47,11 @@
                 <li><a href="#invernadero-túnel-o-semicilíndrico">Invernadero túnel o semicilíndrico</a></li>
                 <li><a href="#cuidado-ambiental">Cuidado ambiental</a></li>
             </ol>
+            -->
+            <li><a href="#internet-de-las-cosas">Internet de las cosas</a></li>
+            <li><a href="#arduino">Arduino</a></li>
             <li><a class="navbar-brand" href="#referencias">Referencias</a></li>
+
           </ol>
       </div>
       <div class="content">
