--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -54,17 +54,38 @@ Internet de las cosas no solo consiste en un despliegue de computadores y sensor
 <p>La aplicación de el Internet de las cosas esta basado en la conexión de dispositivos con los que el ser humano actualmente esta rodeando, esta conexión intercambia información generada por estos mismos, dicha información puede ser para estudio y generar un conocimiento o en la mejor de los casos, para dotar de autonomía a otros dispositivos a partir del cambio y patrones en la información.</p>
 <p>Internet de las cosas, es la firma tecnológica que dejara huella de la humanidad en nuestro mundo, <strong>Kevin Ashton</strong> , creador del termino Internet de las Cosas menciona que:</p>
 <blockquote>
-<p>“si los libros, termostatos, refrigeradores, paquetería, lámparas, botiquines, partes automotrices, entre otros, estuvieran conectados a Internet y equipados con dispositivos de identificación, no existirían, en teoría, artículos fuera de stock o medicinas caducas; sabríamos exactamente su ubicación, cómo se consumen en el mundo; el extravío sería cosa del pasado, y sabríamos qué está encendido y qué está apagado en todo momento. Internet de las cosas tiene el potencial de cambiar el mundo, como hizo Internet en su momento. Tal vez aún más.” –Kevin Ashton–</p>
+<p>“<em>si los libros, termostatos, refrigeradores, paquetería, lámparas, botiquines, partes automotrices, entre otros, estuvieran conectados a Internet y equipados con dispositivos de identificación, no existirían, en teoría, artículos fuera de stock o medicinas caducas; sabríamos exactamente su ubicación, cómo se consumen en el mundo; el extravío sería cosa del pasado, y sabríamos qué está encendido y qué está apagado en todo momento. Internet de las cosas tiene el potencial de cambiar el mundo, como hizo Internet en su momento. Tal vez aún más.</em>” –Kevin Ashton–</p>
 </blockquote>
-<h3 id="aplicaciones">Aplicaciones</h3>
-<h3 id="características">Características</h3>
-<h3 id="seguridad">Seguridad</h3>
 <h2 id="arduino">Arduino</h2>
-<h3 id="historia">Historia</h3>
+<p>Es un proyecto de código abierto, se basa en el fácil uso de hardware y software, Arduino es una tarjeta para leer y escribir datos provenientes de sensores y actuadores, todo esto a partir de un microcontrolador, el inicio de este proyecto es a apartir del 2005, como un programa para estudiantes en el Interaction Design Institute Ivrea en Ivrea, Italia <a href="#ARD2019">(“Arduino - Introduction”, 2019)</a> .</p>
 <h3 id="características-arduino">Características Arduino</h3>
+<p>Arduino tiene alta presencia en proyectos de electrónica ya que cuenta con las siguientes características:</p>
+<ul>
+<li>Bajo en costos, los precios para su comprar son muy accesibles, tanto para estudiantes y proyectos.</li>
+<li>Multiplataforma, su entorno de desarrollo esta disponible para Windows, Macintosh OSX, y GNU/Linux.</li>
+<li>Ambiente de desarrollo fácil de utilizar y aprender, emplea codigo en C y C++.</li>
+<li>Open Source, es de código abierto</li>
+<li>Diseño Hardware libre, los esquemas para el diseño de una tarjeta arduino estan disponibles.</li>
+</ul>
 <h3 id="ide-arduino">IDE Arduino</h3>
+<p>Para trabajar con Arduino, una de las opciones es medainte el IDE de Arduino:</p>
+<center>
+<img src="https://www.programoergosum.com/images/cursos/253-curso-de-iniciacion-a-arduino/software-arduino-ide.png"
+ style="width : 500px;" />
+</center>
+<p>En este IDE las acciones que nos permite realizar son:</p>
+<ul>
+<li><p><strong>Verificar:</strong> Al momento de tener código fuente escrito en el editor, esta herramienta permite analizar el código mediante su compilador, para detectar problemas y violaciones de sintaxis, sintaxis total de lenguaje C y C++, así mismo verifica si se encuentran inicializadas parámetros para la plataforma Arduino.</p></li>
+<li><p><strong>Cargar:</strong> Cuando es el momento de ejecutar nuestro código en la plataforma Arduino, esta herramienta permite subir el código ya compilador al controlador del Arduino.</p></li>
+<li><p><strong>Nuevo:</strong> Ejecuta una instancia nueva y vacía del IDE Arduino</p></li>
+<li><p><strong>Abrir:</strong> Ejecuta una instancia nueva y con algún proyecto Arduino.</p></li>
+<li><p><strong>Guardar:</strong> Guarda el proyecto Arduino, crea un directorio automatico si este no esta.</p></li>
+<li><p><strong>Monitor Serial:</strong> Quizás sea una de las herramientas fundamentales del IDE Arduino, este permite volcar toda la información en la interfaces de conexión serial entre Arduino y la computadora, se puede leer e incluso escribir directamente en la interfaz serial.</p></li>
+<li><p><strong>Editor:</strong> Edición directa del código fuente del proyecto Arduino.</p></li>
+<li><p><strong>Notificaciones:</strong> En esta parte se puede ver los mensajes del estado de las acciones realizadas en el IDE Arduino, muy útil para corregir los errores en nuestro proyecto.</p></li>
+</ul>
 <h2 id="raspberry-pi">Raspberry PI</h2>
-<h3 id="historia-1">Historia</h3>
+<h3 id="historia">Historia</h3>
 <h3 id="características-raspberry-pi">Características Raspberry PI</h3>
 <h3 id="lenguaje-de-programación">Lenguaje de programación</h3>
 <h2 id="invernadero-inteligente">Invernadero Inteligente</h2>
@@ -121,4 +142,5 @@ Internet de las cosas no solo consiste en un despliegue de computadores y sensor
 <li><p><a name="ELJ2019"></a>Invernadero tipo asimetrico o inacral: diseños y tamaños. (2019). Retrieved 16 October 2019, from https://www.eljardin.ws/invernaderos/tipos/invernadero-tipo-asimetrico-o-inacral.html</p></li>
 <li><p><a name="HA2016"></a> Hernandez, S., &amp; Alvarez, A. (2019). Invernadero Capilla : Cultivos Bajo Cubierta. Retrieved 16 October 2019, from https://agroinvernaderos.webnode.es/tipos-de-invernaderos/invernadero-capilla/</p></li>
 <li><p><a name="IEP2019"></a> Invernaderos Túnel - IEP invernaderos. (2019). Retrieved 16 October 2019, from http://www.inverelpilar.com/es/invernaderos/invernaderos-tunel</p></li>
+<li><p><a name="ARD2019"></a> Arduino - Introduction. (2019). Retrieved 16 October 2019, from https://www.arduino.cc/en/guide/introduction</p></li>
 </ol>
