--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -50,6 +50,8 @@
             -->
             <li><a href="#internet-de-las-cosas">Internet de las cosas</a></li>
             <li><a href="#arduino">Arduino</a></li>
+            <li><a href="#raspberry-pi">RaspBerry PI</a></li>
+
             <li><a class="navbar-brand" href="#referencias">Referencias</a></li>
 
           </ol>
