--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -51,6 +51,7 @@
             <li><a href="#internet-de-las-cosas">Internet de las cosas</a></li>
             <li><a href="#arduino">Arduino</a></li>
             <li><a href="#raspberry-pi">RaspBerry PI</a></li>
+            <li><a href="#invernadero-inteligente">Invernadero Inteligente</a></li>
 
             <li><a class="navbar-brand" href="#referencias">Referencias</a></li>
 
