--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -137,6 +137,10 @@ La tarjeta Arduino se presenta a continuación:
  /> <br> Fuente de image: <a href="http://makermex.com">http://makermex.com</a>
 </center>
 <h2 id="invernadero-inteligente">Invernadero Inteligente</h2>
+<p>En las secciones anteriores, se exponen herramientas que permiten ser parte de soluciones para actividades que en la actualidad necesitan emplear recursos digitales e informáticos.</p>
+<p>Una de las actividades en las que hacer uso de sensores, actuadores, y tarjetas de uso general, es la implementación de Invernaderos Inteligentes.</p>
+<p>En los invernaderos inteligentes se hace uso de dispositivos que estén automatizando actividades como es el riego y ventilación de un invernadero.</p>
+<p>En un invernadero existen variables como la temperatura tanto del ambiente y área próxima de los cultivos, humedad de la tierra y del ambiente, que el conocerlas de forma precisa, permitirá una optimización del invernadero.</p>
 <h3 id="propósito">Propósito</h3>
 <h3 id="recursos">Recursos</h3>
 <h4 id="hardware">Hardware</h4>
