--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -52,6 +52,11 @@
             <li><a href="#arduino">Arduino</a></li>
             <li><a href="#raspberry-pi">RaspBerry PI</a></li>
             <li><a href="#invernadero-inteligente">Invernadero Inteligente</a></li>
+            <li><a href="#invernadero-caso-practico">Invernadero caso practico</a></li>
+            <li><a href="#propuesta-de-invernadero-inteligente">Propuesta</a></li>
+            <li><a href="#desarrollo">Desarrollo</a></li>
+
+
 
             <li><a class="navbar-brand" href="#referencias">Referencias</a></li>
 
