--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -232,8 +232,8 @@ El invernadero se encuentra con ubicación en Av. Convento de Santa Mónica s/n 
 <tr class="header">
 <th style="text-align: center;">Cantidad</th>
 <th style="text-align: center;">Tarjeta</th>
-<th style="text-align: center;">Aplicacion</th>
-<th style="text-align: center;">Image</th>
+<th style="text-align: center;">Aplicación</th>
+<th style="text-align: center;">Imagen</th>
 </tr>
 </thead>
 <tbody>
@@ -271,8 +271,8 @@ El invernadero se encuentra con ubicación en Av. Convento de Santa Mónica s/n 
 <tr class="header">
 <th style="text-align: center;">Cantidad</th>
 <th style="text-align: center;">Tarjeta</th>
-<th style="text-align: center;">Aplicacion</th>
-<th style="text-align: center;">Image</th>
+<th style="text-align: center;">Aplicación</th>
+<th style="text-align: center;">Imagen</th>
 </tr>
 </thead>
 <tbody>
