--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -223,9 +223,7 @@ El invernadero se encuentra con ubicación en Av. Convento de Santa Mónica s/n 
  /> <br><br> Diagrama general comunicación.
 </center>
 <p><br></p>
-<h2 id="desarrollo">Desarrollo</h2>
-<h3 id="hardware">Hardware</h3>
-<h4 id="tarjetas">Tarjetas</h4>
+<h3 id="tarjetas">Tarjetas</h3>
 <center>
 <table>
 <thead>
@@ -258,7 +256,7 @@ El invernadero se encuentra con ubicación en Av. Convento de Santa Mónica s/n 
 </tbody>
 </table>
 </center>
-<h4 id="sensores-y-otros">Sensores y otros</h4>
+<h3 id="sensores-y-otros">Sensores y otros</h3>
 <center>
 <table>
 <colgroup>
@@ -303,26 +301,24 @@ El invernadero se encuentra con ubicación en Av. Convento de Santa Mónica s/n 
 </tbody>
 </table>
 </center>
-<h4 id="plataformas">Plataformas</h4>
-<h4 id="sensores">Sensores</h4>
-<h3 id="software">Software</h3>
-<h4 id="programación-en-arduino">Programación en arduino</h4>
-<h4 id="programación-en-python">Programación en python</h4>
-<h4 id="dashboard-web-con-angular">DashBoard web con angular</h4>
-<h4 id="dashboard-local-con-python">DashBoard local con python</h4>
-<h2 id="instalación">Instalación</h2>
-<h3 id="arduino-esclavo-y-maestro">Arduino esclavo y maestro</h3>
-<h3 id="raspberry-pi-maestro">RaspBerry PI maestro</h3>
-<h3 id="diagrama-de-instalación">Diagrama de instalación</h3>
+<h2 id="software">Software</h2>
+<p>Se expone los lenguajes de programación a emplear relacionado a la construcción del software, así mismo se muestra la lógica de cada modulo mediante diagramas de flujo, esto con la finalidad de comprender el funcionamiento en cada tarjeta, los lenguajes de programación dependen de la plataforma en las que se estará trabajando.</p>
+<p>La plataforma Arduino se programa mediante el uso de un lenguaje propio basado en el lenguaje de programación de alto nivel Processing que es similar a C++, para RaspBerry PI se emplea Python, un lenguaje que contiene gran cantidad módulos ya listos para trabajar con especificaciones propias de Raspberry PI y como parte final para los DashBoard se empleara el Framework Angular para el Front-End y Express para el Back-End, ambos propios de Nodejs, en el caso del DashBoard local se usara Python con QtPSyde2 para las tareas graficas.</p>
+<h3 id="programación-en-arduino">Programación en Arduino</h3>
+<h3 id="programación-en-python">Programación en Python</h3>
+<h3 id="dashboard-web-con-angular-8">DashBoard web con Angular 8</h3>
+<h3 id="dashboard-local-con-python">DashBoard local con Python</h3>
 <h2 id="trabajando-con-sensores">Trabajando con sensores</h2>
 <h3 id="simulación">Simulación</h3>
-<h3 id="armado-físico">Armado físico</h3>
-<h3 id="instalacion-fisica">Instalacion fisica</h3>
-<h2 id="desarrollo-del-software-para-arduino">Desarrollo del software para Arduino</h2>
-<h3 id="diagramas-de-flujo-arduino">Diagramas de flujo Arduino</h3>
-<h2 id="desarrollo-del-software-para-raspberry-pi">Desarrollo del software para RaspBerry PI</h2>
-<h3 id="diagramas-de-flujo-raspberry-pi">Diagramas de flujo RaspBerry PI</h3>
-<h2 id="conectando-software-arduino-con-raspberry-pi">Conectando software Arduino con RaspBerry PI</h2>
+<h2 id="instalación">Instalación</h2>
+<h3 id="maestro-y-esclavo">Maestro y Esclavo</h3>
+<h3 id="raspberry-pi-maestro">RaspBerry PI maestro</h3>
+<h3 id="instalando-sensores">Instalando Sensores</h3>
+<h2 id="desarrollo-del-software">Desarrollo del software</h2>
+<h3 id="programando-arduino">Programando Arduino</h3>
+<h3 id="programando-raspberry-pi">Programando Raspberry PI</h3>
+<h3 id="dashboard-local">DashBoard Local</h3>
+<h3 id="dashboard-remoto">DashBoard Remoto</h3>
 <h2 id="ejecución-de-invernadero">Ejecución de invernadero</h2>
 <h3 id="temperatura-ambiente">Temperatura ambiente</h3>
 <h3 id="temperatura-del-suelo">Temperatura del suelo</h3>
