--- a/invernadero/index.html
+++ b/invernadero/index.html
@@ -30,6 +30,8 @@
     </div>
     <div class="container">
 
+
+
       <div class="index-topics overflow-auto">
         <!--<nav class="navbar navbar-light bg-light">-->
           <h3>Contenido</h3>
@@ -53,11 +55,34 @@
             <li><a href="#raspberry-pi">RaspBerry PI</a></li>
             <li><a href="#invernadero-inteligente">Invernadero Inteligente</a></li>
             <li><a href="#invernadero-caso-practico">Invernadero caso practico</a></li>
-            <li><a href="#propuesta-de-invernadero-inteligente">Propuesta</a></li>
-            <li><a href="#desarrollo">Desarrollo</a></li>
-
-
-
+            <li><a href="#propuesta-de-invernadero-inteligente">Propuesta</a>
+              <ol>
+                <li><a href="#tarjetas">Tarjetas</a></li>
+                <li><a href="#software">Software</a></li>
+              </ol>
+            </li>
+            <li><a href="#trabajando-con-sensores">Trabajando con sensores</a>
+              <ol>
+                <li><a href="#simulación">Simulación</a></li>
+              </ol>
+            </li>
+            <li><a href="#instalación">Instalación</a>
+              <ol>
+                <li><a href="#maestro-y-esclavo">Maestro y Esclavo</a></li>
+                <li><a href="#raspberry-pi-maestro">Raspberry PI maestro</a></li>
+                <li><a href="#instalando-sensores">Instalando Sensores</a></li>
+              </ol>
+            </li>
+            <li><a href="#desarrollo-del-software">Desarrollo del Software</a>
+              <ol>
+                <li><a href="#programando-arduino">Programando Arduino</a></li>
+                <li><a href="#programando-raspberry-pi">Programando Raspberry PI</a></li>
+                <li><a href="#dashboard-remoto">DashBoard Remoto</a></li>
+                <li><a href="#dashboard-local">DashBoard Local</a></li>
+              </ol>
+            </li>
+            <li><a href="#ejecución-de-invernadero">Ejecución de invernadero</a>
+            <li><a href="#desarrollo-futuro">Desarrollo futuro</a>
             <li><a class="navbar-brand" href="#referencias">Referencias</a></li>
 
           </ol>
@@ -76,6 +101,11 @@
 
         <div id="includedContent" class="text-justify"></div>
       </div>
+      <!--
+      <div id="sfc48eyu4nseln1zukrr13yuxe4uwrlm6kd"></div>
+      <script type="text/javascript" src="https://counter10.wheredoyoucomefrom.ovh/private/counter.js?c=48eyu4nseln1zukrr13yuxe4uwrlm6kd&down=async" async></script>
+      <br><a href="https://www.contadorvisitasgratis.com">contadores para web</a><noscript><a href="https://www.contadorvisitasgratis.com" title="contadores para web"><img src="https://counter10.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=48eyu4nseln1zukrr13yuxe4uwrlm6kd" border="0" title="contadores para web" alt="contadores para web"></a></noscript>
+      -->
     </div>
   </body>
 </html>
