--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -305,6 +305,14 @@ El invernadero se encuentra con ubicación en Av. Convento de Santa Mónica s/n 
 <p>Se expone los lenguajes de programación a emplear relacionado a la construcción del software, así mismo se muestra la lógica de cada modulo mediante diagramas de flujo, esto con la finalidad de comprender el funcionamiento en cada tarjeta, los lenguajes de programación dependen de la plataforma en las que se estará trabajando.</p>
 <p>La plataforma Arduino se programa mediante el uso de un lenguaje propio basado en el lenguaje de programación de alto nivel Processing que es similar a C++, para RaspBerry PI se emplea Python, un lenguaje que contiene gran cantidad módulos ya listos para trabajar con especificaciones propias de Raspberry PI y como parte final para los DashBoard se empleara el Framework Angular para el Front-End y Express para el Back-End, ambos propios de Nodejs, en el caso del DashBoard local se usara Python con QtPSyde2 para las tareas graficas.</p>
 <h3 id="programación-en-arduino">Programación en Arduino</h3>
+Diagrama de flujo de datos para arduino maestro
+<center>
+<img src="./img/photos/diagramaMaestroArduino.png"
+ style="width : 500px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Diagrama de flujo para Arduino Maestro.
+</center>
+<p><br> <br></p>
 <h3 id="programación-en-python">Programación en Python</h3>
 <h3 id="dashboard-web-con-angular-8">DashBoard web con Angular 8</h3>
 <h3 id="dashboard-local-con-python">DashBoard local con Python</h3>
