--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -508,10 +508,12 @@ void reciveEvent(int n) {
   Serial.println(&quot;Finish recolected data from sensor&quot;);
 }
 </code></pre>
-<p>Simulación en tinkercad</p>
-<video width="400" controls>
+<center>
+<p>Simulación en Tinkercad</p>
+<video width="600" controls>
 <source src="./videos/simulacioni2c.mp4" type="video/mp4">
-<p>Your browser does not support HTML5 video. </video></p>
+Your browser does not support HTML5 video. </video>
+</center>
 <h2 id="instalación">Instalación</h2>
 <h3 id="maestro-y-esclavo">Maestro y Esclavo</h3>
 <h3 id="raspberry-pi-maestro">RaspBerry PI maestro</h3>
