--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -516,13 +516,57 @@ Your browser does not support HTML5 video. </video>
 </center>
 <h2 id="instalación">Instalación</h2>
 <h3 id="maestro-y-esclavo">Maestro y Esclavo</h3>
+<center>
+<img src="./img/photos/IMG_20190903_140847.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Diseño de envió de información
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190903_140854.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Pruebas de comunicación
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190903_140858.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Pruebas de comunicación
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20191003_101809.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Instalación en placa de soporte
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190919_113157.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Fabricando placa de soporte
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20191003_101719_rotada.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Instalación en contenedor
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20191003_141738_rotada.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Instalación Arduinos esclavos y maestro
+</center>
+<p><br> <br></p>
 <h3 id="raspberry-pi-maestro">RaspBerry PI maestro</h3>
 <h3 id="instalando-sensores">Instalando Sensores</h3>
-<h2 id="desarrollo-del-software">Desarrollo del software</h2>
-<h3 id="programando-arduino">Programando Arduino</h3>
-<h3 id="programando-raspberry-pi">Programando Raspberry PI</h3>
-<h3 id="dashboard-local">DashBoard Local</h3>
-<h3 id="dashboard-remoto">DashBoard Remoto</h3>
 <h2 id="ejecución-de-invernadero">Ejecución de invernadero</h2>
 <h3 id="temperatura-ambiente">Temperatura ambiente</h3>
 <h3 id="temperatura-del-suelo">Temperatura del suelo</h3>
