--- a/invernadero/invernadero.html
+++ b/invernadero/invernadero.html
@@ -538,17 +538,17 @@ Your browser does not support HTML5 video. </video>
 </center>
 <p><br> <br></p>
 <center>
-<img src="./img/photos/IMG_20191003_101809.jpg"
- style="width : 600px;"
- class="img-fluid img-thumbnail"
- /> <br><br> Instalación en placa de soporte
-</center>
-<p><br> <br></p>
-<center>
 <img src="./img/photos/IMG_20190919_113157.jpg"
  style="width : 600px;"
  class="img-fluid img-thumbnail"
  /> <br><br> Fabricando placa de soporte
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20191003_101809.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Instalación en placa de soporte
 </center>
 <p><br> <br></p>
 <center>
@@ -567,6 +567,90 @@ Your browser does not support HTML5 video. </video>
 <p><br> <br></p>
 <h3 id="raspberry-pi-maestro">RaspBerry PI maestro</h3>
 <h3 id="instalando-sensores">Instalando Sensores</h3>
+<center>
+<img src="./img/photos/IMG_20190903_083540-R.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Preparar ambiente de prueba para sensores
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190903_091944.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Instalación de sensores en ambiente de prueba para sensores
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190903_091948.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Instalación de sensores en ambiente de prueba para sensores
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190903_091950.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Ejecución sensores en ambiente de prueba para sensores
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190903_091957.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Ejecución sensores en ambiente de prueba para sensores
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190912_110445-R.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Observando parcela para instalación
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190912_110338.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Realizando mediciones de parcelas
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190912_110433-R.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Realizando mediciones de parcelas
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190912_110443-R.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Realizando mediciones de parcelas
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190912_112141-R.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Realizando pozos para sensores de tierra
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190912_112340.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Realizando cortes en cables comunicación
+</center>
+<p><br> <br></p>
+<center>
+<img src="./img/photos/IMG_20190912_113702.jpg"
+ style="width : 600px;"
+ class="img-fluid img-thumbnail"
+ /> <br><br> Soldando sensores
+</center>
+<p><br> <br></p>
 <h2 id="ejecución-de-invernadero">Ejecución de invernadero</h2>
 <h3 id="temperatura-ambiente">Temperatura ambiente</h3>
 <h3 id="temperatura-del-suelo">Temperatura del suelo</h3>
