--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
   </head>
   <body>
     <div class = "container">
+      <div class="row">
+        <div class="col-12">
+
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-4 p-3 mb-2 bg-secondary text-white">
+
+        </div>
+        <div class="col-8 p-3 mb-2 bg-light text-dark">
+
+        </div>
+      </div>
 
     </div>
   </body>
