--- a/index.html
+++ b/index.html
@@ -10,17 +10,110 @@
   </head>
   <body>
     <div class = "container">
-      <div class="row">
+      <div class="row p-3 mb-2 bg-dark text-white">
         <div class="col-12">
-
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">NoeVG</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Proyectos</a>
+                <a class="nav-item nav-link" href="#">Repositorios</a>
+                <a class="nav-item nav-link disabled" href="#">Servicios</a>
+                <a class="nav-item nav-link disabled" href="#">Contacto</a>
+              </div>
+            </div>
+          </nav>
         </div>
       </div>
 
       <div class="row">
         <div class="col-4 p-3 mb-2 bg-secondary text-white">
-
+          <center>
+          <div class="card bg-secondary text-white " style="width: 18rem;">
+            <img class="card-img-top" src="https://avatars2.githubusercontent.com/u/19269833?s=460&v=4" alt="Card image cap">
+            <div class="card-body">
+              <h2>Noé Vásquez Godínez</h2>
+              <p class="card-text">Estudiante actual de Ingeniería en Computación en la Universidad Autónoma del Estado México.</p>
+            </div>
+          </div>
+          </center>
         </div>
         <div class="col-8 p-3 mb-2 bg-light text-dark">
+          <h3>Información</h3>
+          <p  class="text-justify">Estudiante de ultimo año de Ingeniería en Computación,
+                                  Asistente de investigación en el proyecto Picking and Batching Problem and
+                                  Sequencing Orders in Warehouses, miembro activo del Seminario de Investigacion
+                                  en Simulación y Análisis de Datos.<br><br>
+                                  Con participación en diversos proyectos de
+                                  automatización, desarrollo web, IoT, desarrollador de software con interacción
+                                  hombre-maquina e inteligencia artificial, experiencia en redes y comunicaciones.<br>
+                                  </p>
+
+                                  <div class="row">
+                                    <div class="col-4"></div>
+                                    <div class="col-4">
+                                      Desarrollo de algoritmos
+                                          <ol type=disc>
+                                            <li>Evolutivos</li>
+                                            <li>Redes Neuronales</li>
+                                            <li>Clustering</li>
+                                    </div>
+                                    <div class="col-4"></div>
+                                  </div>
+                                  <div class="row">
+                                    <div class="col-6">
+                                      Usuario administrador de sistemas Linux con experiencia:<br>
+                                      <ol type=disc>
+                                        <li>Debian GNU/Linux</li>
+                                        <li>Fedora Linux</li>
+                                        <li>Backtrack 5r3 Linux</li>
+                                        <li>Kali Linux</li>
+                                      </ol>
+                                    </div>
+                                    <div class="col-6">
+                                      Desarrollador de software para : <br>
+                                      <ol type=disc>
+                                        <li>C++ / QT</li>
+                                        <li>OpenCV</li>
+                                        <li>Java 8 </li>
+                                        <li>Android (Java y Jotlin)</li>
+                                        <li>Python</li>
+                                        <li>C# .NET</li>
+                                      </ol>
+                                    </div>
+                                  </div>
+                                  <div class="row">
+                                    <div class="col-6">
+                                      Desarrollador de software web Back-end : <br>
+                                      <ol type=disc>
+                                        <li>Java</li>
+                                        <li>PHP</li>
+                                        <li>Nodejs</li>
+                                      </ol>
+                                    </div>
+                                    <div class="col-6">
+                                      Desarrollador de software web Front-end : <br>
+                                      <ol type=disc>
+                                        <li>Angular</li>
+                                        <li>PHP Laravel</li>
+                                        <li>ReactJS</li>
+                                      </ol>
+                                    </div>
+                                  </div>
+
+        </div>
+      </div>
+
+      <div class="row p-3 mb-2 bg-dark text-white">
+        <div class="col-12">
+
+          <div>
+          <img align="right" class="card-img-top" src="./simbolo.png" style="width:50px;height:50;" alt="Card image cap">
+          </div>
 
         </div>
       </div>
