--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       </div>
 
       <div class="row">
-        <div class="col-4 p-3 mb-2 bg-secondary text-white">
+        <div class="img-fluid col-4 p-3 mb-2 bg-secondary text-white">
           <center>
-          <div class="card bg-secondary text-white " style="width: 18rem;">
+          <div class="card bg-secondary text-white ">
             <img class="card-img-top" src="https://avatars2.githubusercontent.com/u/19269833?s=460&v=4" alt="Card image cap">
-            <div class="card-body">
-              <h2>Noé Vásquez Godínez</h2>
-              <p class="card-text">Estudiante actual de Ingeniería en Computación en la Universidad Autónoma del Estado México.</p>
+            <div class="card-body container-fluid">
+              <h4>Noé Vásquez Godínez</h4>
+              <p class="card-text container-fluid">Estudiante actual de Ingeniería en Computación en la Universidad Autónoma del Estado México.</p>
             </div>
           </div>
           </center>
