--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="row p-3 mb-2 bg-dark text-white">
         <div class="col-12">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">NoeVG</a>
+            <a class="navbar-brand" href="https://noevg.github.io/">NoeVG</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,8 +22,8 @@
                 <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#">Proyectos</a>
                 <a class="nav-item nav-link" href="#">Repositorios</a>
-                <a class="nav-item nav-link disabled" href="#">Servicios</a>
-                <a class="nav-item nav-link disabled" href="#">Contacto</a>
+                <a class="nav-item nav-link" href="#">Servicios</a>
+                <a class="nav-item nav-link" href="#">Contacto</a>
               </div>
             </div>
           </nav>
@@ -55,7 +55,7 @@
 
                                   <div class="row">
                                     <div class="col-4"></div>
-                                    <div class="col-4">
+                                    <div class="col-8">
                                       Desarrollo de algoritmos
                                           <ol type=disc>
                                             <li>Evolutivos</li>
