--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                         <li>C++ / QT</li>
                                         <li>OpenCV</li>
                                         <li>Java 8 </li>
-                                        <li>Android (Java y Jotlin)</li>
+                                        <li>Android (Java y Kotlin)</li>
                                         <li>Python</li>
                                         <li>C# .NET</li>
                                       </ol>
