--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="row p-3 mb-2 bg-dark text-white">
         <div class="col-12">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="https://noevg.github.io/">NoeVG</a>
+            <a class="navbar-brand" href="index.html">NoeVG</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,8 +22,8 @@
                 <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#">Proyectos</a>
                 <a class="nav-item nav-link" href="#">Repositorios</a>
-                <a class="nav-item nav-link" href="#">Servicios</a>
-                <a class="nav-item nav-link" href="#">Contacto</a>
+                <a class="nav-item nav-link" href="servicios.html">Servicios</a>
+                <a class="nav-item nav-link" href="contacto.html">Contacto</a>
               </div>
             </div>
           </nav>
@@ -61,6 +61,7 @@
                                             <li>Evolutivos</li>
                                             <li>Redes Neuronales</li>
                                             <li>Clustering</li>
+                                          </ol>
                                     </div>
                                     <div class="col-4"></div>
                                   </div>
