--- a/recursos.html
+++ b/recursos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta charset="utf-8">
-    <title>Noé Vásquez Godínez | Contacto</title>
+    <title>Noé Vásquez Godínez | Recursos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -35,21 +35,16 @@
       <div>
         <div class="card shadow-lg p-3 mb-5 bg-white rounded">
           <div class="card-header">
-            Datos Contactos
+            <h5 class="card-title">Programacion Orientada Objetos</h5>
           </div>
           <div class="card-body">
-              <h5 class="card-title">Correo Electrónico</h5>
+              <h5>Recursos</h5>
               <ol type=disc>
-                <li>noe-x@outlook.com</li>
-                <li>noe.vasquezx@gmail.com</li>
-                <li>nvasquezg736@alumno.uaemex.mx</li>
+                <li><a href="https://1drv.ms/b/s!AnAW5kIb9GF-g193NGAlKRTYBOA3?e=IeKlne">Object Oriented Programming and Java </a></li>
+                <li><a href="https://1drv.ms/b/s!AnAW5kIb9GF-g10tiXWwwNDENygw?e=CSHaID">Object Oriented Programming using Java </a></li>
+                <li><a href="https://1drv.ms/b/s!AnAW5kIb9GF-g2AJP2F2b_4oWvOe?e=7zJKRR">object-oriented-and-classical-software-engineering</a></li>
+                <li><a href="https://1drv.ms/b/s!AnAW5kIb9GF-g17zn75JKEz8Of3Q?e=RmtSvO">Principles Of Object Oriented Programming</a></li>
               </ol>
-
-              <h5 class="card-title">Atención directa</h5>
-              <ol type=disc>
-                <li>55 6169 1048</li>
-              </ol>
-
           </div>
         </div>
       </div>
