--- a/servicios.html
+++ b/servicios.html
@@ -23,6 +23,7 @@
                 <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#">Proyectos</a>
                 <a class="nav-item nav-link" href="#">Repositorios</a>
+                <a class="nav-item nav-link" href="recursos.html">Recursos</a>
                 <a class="nav-item nav-link" href="servicios.html">Servicios</a>
                 <a class="nav-item nav-link" href="contacto.html">Contacto</a>
               </div>
