--- a/recursos.html
+++ b/recursos.html
@@ -48,6 +48,21 @@
           </div>
         </div>
       </div>
+
+      <div>
+        <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+          <div class="card-header">
+            <h5 class="card-title">Diseño de Redes RUP</h5>
+          </div>
+          <div class="card-body">
+              <h5>Recursos</h5>
+              <ol type=disc>
+                <li><a href="./presentacion/presentacion.html">Rup Presentacion </a></li>
+              </ol>
+          </div>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
